[package]
name = "warframestat-rs"
version = "0.0.1"
authors = ["Peter D. Faria", "OpenAPI Generator team and contributors"]
edition = "2018"
description = "Rust API for the public WarframeStat APIs provided at https://warframestat.us"
license = "MIT"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
